--- a/src/app/Pages/checkout/checkout.component.html
+++ b/src/app/Pages/checkout/checkout.component.html
@@ -1,99 +1,5 @@
 <div style="margin: 20px 0px; padding: 20px 30px">
-  <button (click)="changeSwitch()">Change Switch</button>
 
-  <app-checkout-form [switchTrigger]="switch"></app-checkout-form>
+  <app-checkout-form></app-checkout-form>
 
-  <div *ngIf="switch == true" class="form-cont">
-    <form action="" [formGroup]="clientForm" #userForm="ngForm">
-      <div class="form-header">
-        <h2>Client Information Form</h2>
-      </div>
-
-      <div class="form-info-cont">
-        <div class="form-group">
-          <mat-form-field>
-            <mat-label>First Name</mat-label>
-            <input
-              type="text"
-              matInput
-              placeholder="Enter first name"
-              formControlName="firstname"
-              required
-            />
-            <mat-error *ngIf="firstname?.errors?.['required']"
-              >Your first name is required</mat-error
-            >
-          </mat-form-field>
-
-          <mat-form-field>
-            <mat-label>Last Name</mat-label>
-            <input
-              type="text"
-              matInput
-              placeholder="Enter last name"
-              formControlName="lastname"
-              required
-            />
-            <mat-error *ngIf="lastname?.errors?.['required']"
-              >Your last name is required</mat-error
-            >
-          </mat-form-field>
-
-          <mat-form-field>
-            <mat-label>Phone Number</mat-label>
-            <input
-              type="text"
-              matInput
-              placeholder="Enter phone number"
-              formControlName="phoneNum"
-              required
-            />
-            <mat-error *ngIf="firstname?.errors?.['required']"
-              >Your first name is required</mat-error
-            >
-          </mat-form-field>
-        </div>
-
-        <div class="form-control">
-          <mat-form-field>
-            <mat-label>Address</mat-label>
-            <textarea
-              matInput
-              placeholder="Enter your Address"
-              formControlName="address"
-              required
-            ></textarea>
-            <mat-error *ngIf="address?.errors?.['required']"
-              >Your Address is required</mat-error
-            >
-          </mat-form-field>
-        </div>
-
-        <div class="form-control">
-          <mat-form-field>
-            <mat-label>Client Note</mat-label>
-            <textarea
-              matInput
-              cdkAutosizeMinRows="2"
-              cdkAutosizeMaxRows="500"
-              cdkTextareaAutosize
-              cols="3"
-              placeholder="Notes you would like to add"
-              formControlName="note"
-              required
-            ></textarea>
-            <mat-error *ngIf="note?.errors?.['required']"
-              >Your Address is required</mat-error
-            >
-          </mat-form-field>
-        </div>
-      </div>
-    </form>
-
-    <div class="btn-cont">
-      <button mat-raised-button class="btn btn--sm" (click)="moveOn()">
-        Submit Form
-      </button>
-    </div>
-  </div>
 </div>
