--- a/src/app/Components/checkout-form/checkout-form.component.scss
+++ b/src/app/Components/checkout-form/checkout-form.component.scss
@@ -11,8 +11,12 @@ mat-stepper{
   margin: 5px;
 }
 
+.mat-label{
+  margin-bottom: 20px;
+}
+
 .radio-cont{
-  margin: 25px 0px;
+  margin: 15px 0px;
 }
 
 .mat-radio-vert{
@@ -35,6 +39,15 @@ mat-stepper{
   color: red;
   font-size: .75em;
 }
+
+.btn-cont{
+  margin-top: 30px;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  gap: 1rem;
+}
+
 
 .mat-form-field{
   width: 100%;
