add notice messages to header links

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,10 +11,10 @@
   <div class="main-nav">
     <ul class="nav-links">
       <div class="link1" routerLink="/products"><li>HOME</li></div>
-      <div class="link2"><li>ABOUT</li></div>
-      <div class="link3"><li>SERVICES</li></div>
-      <div class="link4"><li>TESTIMONIALS</li></div>
-      <div class="link5"><li>CONTACT</li></div>
+      <div class="link2" (click)="navLink()"><li>ABOUT</li></div>
+      <div class="link3" (click)="navLink()"><li>SERVICES</li></div>
+      <div class="link4" (click)="navLink()"><li>TESTIMONIALS</li></div>
+      <div class="link5" (click)="navLink()"><li>CONTACT</li></div>
     </ul>
   </div>
   <!-- ************ Access links to forms *********** -->
