--- a/src/app/Components/product-edit/product-edit.component.html
+++ b/src/app/Components/product-edit/product-edit.component.html
@@ -27,7 +27,8 @@
             <div class="form-group grid gap-6 grid-cols-2  mb-6">
                 <div class="relative z-0">
                     <select id="category" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-trinityBlue focus:outline-none focus:ring-0 focus:border-trinityBlue peer" placeholder=" " formControlName="category">
-                        <option>-- Select Category --</option>
+                        <option selected>-- Select Category --</option>
+                        <option [value]="category._id" *ngFor="let category of categories">{{category.name}}</option>
                     </select>
                     <label for="category" class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Category</label>
                 </div>
@@ -36,8 +37,11 @@
                     <label for="price" class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Price</label>
                 </div>
             </div>
-           
-            <button mat-raised-button type="submit" class="bg-trinityBlue" [mat-dialog-close]="submitData()">Submit</button>
+            
+            <div class="flex justify-between">
+                <button mat-raised-button type="submit" class="bg-trinityBlue" [mat-dialog-close]="submitData()">Submit</button>
+                <!-- <button mat-raised-button class="bg-gray-500" (click)="closeDialog()">Submit</button> -->
+            </div>
         </form>
     </div>
 </section>
