--- a/src/app/Components/ticket-edit/ticket-edit.component.html
+++ b/src/app/Components/ticket-edit/ticket-edit.component.html
@@ -24,12 +24,15 @@
                 <div class="relative z-0">
                     <select id="plumber" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-trinityBlue focus:outline-none focus:ring-0 focus:border-trinityBlue peer" placeholder=" " formControlName="plumber">
                         <option>-- Select Plumber --</option>
+                        <option [value]="plumber._id" *ngFor="let plumber of plumbers">{{plumber.plumbername}}</option>
                     </select>
                     <label for="plumber" class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Plumber</label>
                 </div>
                 <div class="relative z-0">
                     <select id="services" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-trinityBlue focus:outline-none focus:ring-0 focus:border-trinityBlue peer" placeholder=" " formControlName="service">
                         <option>-- Select Services --</option>
+                        <option [value]="service._id" *ngFor="let service of services">{{service.name}}</option>
+
                     </select>
                     <label for="services" class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Services</label>
                 </div>
