updted ticket page for option on setting form blank

--- a/src/app/Pages/ticket/ticket.component.html
+++ b/src/app/Pages/ticket/ticket.component.html
@@ -7,7 +7,7 @@
                 <th>Phone</th>
                 <th>Notes</th>
                 <th>Actions</th>
-                <th><button class="rounded-3xl h-10 w-10  bg-trinityBlue inline-flex items-center justify-center text-white" title="Add a new plumber" (click)="openDialog()"><i class="fa-solid fa-plus"></i></button></th>
+                <th><button class="rounded-3xl h-10 w-10  bg-trinityBlue inline-flex items-center justify-center text-white" title="Add a new Ticket" (click)="openDialog()"><i class="fa-solid fa-plus"></i></button></th>
             </tr>
         </thead>
         <tbody #editableForms>
