--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="border">
-  <div class="main-container">
+<section class="min-h-[50vh] flex justify-center items-center">
+  <div class="main-container p-20">
     <div class="log">
       <div class="header">
         <h4>SIGN IN</h4>
@@ -10,20 +10,28 @@
         </h2>
       </div>
 
-      <form action="/action_page.php">
-
+      <form [formGroup]="plumForm" (submit)="submit()">
+        
         <div class="form-group">
+          <div class="errors">
+            <span  span style="color:rgb(203, 26, 26);font-weight:bold" class="error" *ngIf="(createControl['email']?.touched  && createControl['email']?.errors?.['required'])"> This field is required</span>
+          <span  span style="color:rgb(227, 33, 33);font-weight:bold"class="error" *ngIf="(createControl['email']?.touched && createControl['email']?.errors?.['pattern'])"> Input not a valid email address</span>
+          
+          </div>
           <label for="email">Email</label><br />
           <input
          
             type="email"
             id="email"
             name="email"
-            
+            formControlName="email"
             required
           /><br />
         </div>
+        <div class="errors">
+          <span span style="color:rgb(209, 11, 41);font-weight:bold" class="error" *ngIf="(createControl['password']?.touched  &&  createControl['password']?.errors?.['required'])"> password is required</span>
 
+        </div>
         <div class="form-group">
           <label for="password">Password</label><br />
           <input
@@ -31,16 +39,17 @@
             type="password"
             id="password"
             name="password"
-            
+            formControlName = "password"
             required
           /><br />
         </div>
 
         <div class="buwrapper">
-          <button type="submit"  class="button button1">sign in</button>
-          <button  type="submit"  class="button button2">create user</button>
+          <button type="submit" [disabled]="!plumForm.valid"   class="button button1">Login</button>
         </div>
       </form>
     </div>
   </div>
-</div>
+  
+
+</section>
