--- a/src/app/Pages/products/products.component.html
+++ b/src/app/Pages/products/products.component.html
@@ -21,9 +21,9 @@
         <div class="mt-10 w-fit h-[850px] relative">
             <img src="/assets/img/asideAds.png" alt="" class="h-full">
             <div class="text-white w-full h-full backdrop-brightness-[0.3] absolute top-0 uppercase">
-                <p class="font-bold text-6xl pt-40 pb-2 px-20 border-b w-fit">ads</p>
-                <p class="font-bold text-8xl text-center">not</p>
-                <p class="text-9xl font-thin">down</p>
+                <p class="font-bold text-5xl pt-40 pb-2 px-20 border-b w-fit">ads</p>
+                <p class="font-bold text-7xl text-center">not</p>
+                <p class="text-8xl font-thin px-2 text-center">down</p>
                 <p class="font-medium text-4xl px-20 border-b w-fit ml-auto">sight</p>
             </div>
         </div>
@@ -33,10 +33,19 @@
         <div>
             <img src="/assets/img/pipeGold.png" alt="" class="w-full">
         </div>
-        <div class="flex gap-5">
-            <div class="bg-blue-500 text-white w-full">Dummy Text</div>
-            <div class="bg-blue-500 text-white w-full">Dummy Text</div>
-            <div class="bg-blue-500 text-white w-full">Dummy Text</div>
+        <div class="flex uppercase">
+            <div class="bg-[#005DA4] text-white w-full flex gap-3 items-center p-5">
+                <i class="fa-solid fa-wrench"></i>
+                <p>residential plumbing</p>
+            </div>
+            <div class="bg-blue-500 text-white w-full flex gap-3 items-center p-5">
+                <i class="fa-solid fa-faucet-drip"></i>
+                <p>Commercial plumbing</p>
+            </div>
+            <div class="bg-[#005DA4] text-white w-full flex gap-3 items-center p-5">
+                <i class="fa-solid fa-helmet-safety"></i>
+                <p>Service & repaire</p>
+            </div>
         </div>
 
         
