--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,10 @@
 }
 
 
+.mat-step-header .mat-step-icon-selected{
+  @apply bg-trinityBlue;
+}
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
