--- a/src/app/Pages/cart-page/cart-page.component.html
+++ b/src/app/Pages/cart-page/cart-page.component.html
@@ -55,12 +55,12 @@
                             <p>SubTotal: <span class="bold">{{cartService.getCartTotal()| currency}}</span></p>
                         </div>
                         <div class="cta">
-                            <button class="back" (click)="goBack()">
+                            <button class="back  text-darkBlue" (click)="goBack()">
                                 <span>
                                     <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <g clip-path="url(#clip0_307_209)">
-                                        <path d="M31.4286 17.1414L32.3586 17.1414C32.7114 17.1414 33 16.8528 33 16.5C33 16.1472 32.7114 15.8586 32.3586 15.8586L31.4286 15.8586C31.0758 15.8586 30.7872 16.1472 30.7872 16.5C30.7872 16.8528 31.0758 17.1414 31.4286 17.1414Z" fill="black"/>
-                                        <path d="M0.192336 16.949L12.6996 29.4563C12.9562 29.7128 13.341 29.7128 13.5976 29.4563C13.8541 29.1997 13.8541 28.8149 13.5976 28.5583L2.18068 17.1414L28.5422 17.1414C28.895 17.1414 29.1836 16.8528 29.1836 16.5C29.1836 16.1472 28.895 15.8586 28.5422 15.8586L2.18068 15.8586L13.5976 4.44169C13.8541 4.18513 13.8541 3.80029 13.5976 3.54373C13.4693 3.41545 13.309 3.35131 13.1486 3.35131C12.9883 3.35131 12.8279 3.41545 12.6996 3.54373L0.192336 16.051C-0.0642231 16.3076 -0.0642231 16.6924 0.192336 16.949Z" fill="black"/>
+                                        <path d="M31.4286 17.1414L32.3586 17.1414C32.7114 17.1414 33 16.8528 33 16.5C33 16.1472 32.7114 15.8586 32.3586 15.8586L31.4286 15.8586C31.0758 15.8586 30.7872 16.1472 30.7872 16.5C30.7872 16.8528 31.0758 17.1414 31.4286 17.1414Z" fill="currentColor"/>
+                                        <path d="M0.192336 16.949L12.6996 29.4563C12.9562 29.7128 13.341 29.7128 13.5976 29.4563C13.8541 29.1997 13.8541 28.8149 13.5976 28.5583L2.18068 17.1414L28.5422 17.1414C28.895 17.1414 29.1836 16.8528 29.1836 16.5C29.1836 16.1472 28.895 15.8586 28.5422 15.8586L2.18068 15.8586L13.5976 4.44169C13.8541 4.18513 13.8541 3.80029 13.5976 3.54373C13.4693 3.41545 13.309 3.35131 13.1486 3.35131C12.9883 3.35131 12.8279 3.41545 12.6996 3.54373L0.192336 16.051C-0.0642231 16.3076 -0.0642231 16.6924 0.192336 16.949Z" fill="currentColor"/>
                                         </g>
                                         <defs>
                                         <clipPath id="clip0_307_209">
@@ -71,7 +71,7 @@
                                 </span>
                                 <span>Go Back</span>
                             </button>
-                            <button class="checkout" routerLink="/checkout">
+                            <button class="bg-darkBlue p-1 px-8 text-white" routerLink="/checkout">
                                 checkout
                             </button>
                         </div>
