--- a/src/app/Components/product-card/product-card.component.html
+++ b/src/app/Components/product-card/product-card.component.html
@@ -1,18 +1,18 @@
 <!-- <section class="w-[65%] border grid grid-cols-3 m-auto" > -->
     <div
-    class="p-5 hover:cursor-pointer hover:border hover:shadow-md hover:shadow-[#70CEEE]"
+    class="p-5 hover:cursor-pointer hover:border hover:shadow-sm hover:shadow-[#70CEEE]"
     (click)="openDialog(productsData)"
     >
-        <div class="flex justify-center items-center">
-            <img src="http://localhost:3000/{{productsData.image}}" alt="">
+        <div class="flex justify-center items-center h-[140px]">
+            <img src="http://localhost:3000/{{productsData.image}}" alt="" class="h-full">
         </div>
         <div class="text-center">
             <h1 class="text-xl font-bold text-[#005DA4] py-2 capitalize">{{productsData.name}}</h1>
-            <p class="px-2">
-                {{productsData.description}}
+            <p class="px-2 text-sm text-gray-500">
+                {{productsData.description.slice(0, 130)}}...
             </p>
         </div>
-        <div class="flex justify-between items-center px-5 py-2">
+        <div class="flex justify-center gap-5 items-center px-5 py-2">
             <h2 class="text-[#70CEEE] text-xl font-medium">${{productsData.price}}</h2>
             <div class="flex items-center">
                 <label class="rating-label" dir="rtl">
