--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,7 +34,7 @@
 }
 
 
-.mat-step-header .mat-step-icon-selected{
+.mat-step-header .mat-step-icon-selected, .mat-step-header .mat-step-icon-state-edit{
   @apply bg-trinityBlue;
 }
 
