--- a/src/app/Components/checkout-form/checkout-form.component.html
+++ b/src/app/Components/checkout-form/checkout-form.component.html
@@ -2,7 +2,7 @@
   <!-- mat-stepper themePalette didnt work -->
   <mat-stepper [linear]="true" #stepper>
     <!--* Email Step -->
-    <mat-step [stepControl]="emailForm" [editable]="true">
+    <!-- <mat-step [stepControl]="emailForm" [editable]="true">
       <ng-template matStepLabel class="step-label">
         Client recognition
       </ng-template>
@@ -38,11 +38,11 @@
           </button>
         </div>
       </form>
-    </mat-step>
+    </mat-step> -->
     <!-- Email End -->
 
     <!--* Card details Step -->
-    <mat-step [stepControl]="cardForm">
+    <!-- <mat-step [stepControl]="cardForm">
       <form action="" [formGroup]="cardForm" #payForm="ngForm">
         <ng-template matStepLabel class="step-label">
           Enter card information</ng-template
@@ -149,7 +149,7 @@
           </button>
         </div>
       </form>
-    </mat-step>
+    </mat-step> -->
     <!-- Card details End -->
 
     <!--* Confirmation Step -->
@@ -169,68 +169,52 @@
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque assumenda itaque magnam recusandae. Doloremque voluptatem omnis eum libero dolore reprehenderit perferendis quidem illum facilis, debitis voluptate nobis molestiae. Ullam, excepturi!
         </div>
 
-        <div class="order-summary">
-          <div class="order-title">
-            <h2>Order Summary</h2>
-            <h3>Total:800.00</h3>
-          </div>
-          <div class="order-card-cont">
-            <div class="order-card">
-              <div class="img-cont">
-                <img src="/assets/img/pipeGold.png" alt="">
+        <div class="lg:w-[40vw] min-h-[40vh] border-t-4 border-trinityBlue">
+            <div class="order-top flex justify-between items-center p-4">
+              <h1 class="text-2xl">Order Summary</h1>
+              <div class="flex justify-evenly text-sm gap-4">
+                <p><span class="text-blue-300 mr-2">Order id:</span> <span class="text-darkBlue font-medium">#5984729</span></p>
+                <p><span class="text-blue-300 mr-2">Order date:</span> <span class="text-darkBlue font-medium">07/09/22</span></p>
               </div>
-            <p class="order-descrip">
-             1x Gold pipe
-            </p>
-            <p class="order-total">
-              $800.00
-            </p>
             </div>
-          </div>
+            <div class="order-meta text-center bg-trinityBlue p-4">
+              <h2 class="text-2xl text-white">Thank you for making an order</h2>
+            </div>
+            <div class="order-list p-6">
+                <ul class="border relative min-h-[10vh] p-6">
+                  <span class="uppercase absolute p-1 px-6 bg-white text-gray-400 text-sm left-1/2  top-0 -translate-x-1/2 -translate-y-1/2 border">Receipt</span>
 
-          <div class="order-card-cont">
-            <div class="order-card">
-              <div class="img-cont">
-                <img src="/assets/img/pipeGold.png" alt="">
-              </div>
-            <p class="order-descrip">
-             Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-            <p class="order-total">
-              800.00
-            </p>
-            </div>
-          </div>
+                  <!-- List of Items in Order -->
+                  <li class="flex  gap-4 py-4 border-t border-gray-200 first-of-type:border-none">
+                    <div class="img-wrapper w-[150px]">
+                      <img src="/assets/img/pipeGold.png" alt="Img of a orderitem">
+                    </div>
+                    <div class="item-details flex-grow flex-col flex justify-center">
+                      <p class="font-medium text-darkBlue">Variation of a pipe item</p>
+                      <p class=" text-gray-400 text-xs">Quantity: 9</p>
+                    </div>
+                    <div class="price text-center font-semibold flex items-center justify-end text-darkBlue">
+                      <p>{{6490 | currency }}</p>
+                    </div>
+                  </li>
+                  <li class="flex  gap-4 py-4 border-t border-gray-200">
+                    <div class="img-wrapper w-[150px]">
+                      <img src="/assets/img/pipeGold.png" alt="Img of a orderitem">
+                    </div>
+                    <div class="item-details flex-grow flex-col flex justify-center">
+                      <p class="font-medium text-darkBlue">Variation of a pipe item</p>
+                      <p class=" text-gray-400 text-xs">Quantity: 9</p>
+                    </div>
+                    <div class="price text-center font-semibold flex items-center justify-end text-darkBlue">
+                      <p>{{6490 | currency }}</p>
+                    </div>
+                  </li>
+                  <!-- End list of orders -->
 
-          <div class="order-card-cont">
-            <div class="order-card">
-              <div class="img-cont">
-                <img src="/assets/img/pipeGold.png" alt="">
-              </div>
-            <p class="order-descrip">
-             Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-            <p class="order-total">
-              800.00
-            </p>
+                  <p class="absolute p-1 px-6 bg-trinityBlue text-white text-sm right-[-1px]  bottom-0 translate-y-1/2"><span class="text-xs mr-2">Total:</span> <span class="text-white font-semibold text-md">{{7845 | currency}}</span></p>
+                </ul>
             </div>
-          </div>
-
-          <div class="order-card-cont">
-            <div class="order-card">
-              <div class="img-cont">
-                <img src="/assets/img/pipeGold.png" alt="">
-              </div>
-            <p class="order-descrip">
-             Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-            <p class="order-total">
-              800.00
-            </p>
-            </div>
-          </div>
         </div>
-
       </div>
 
       <div class="btn-cont">
