--- a/src/app/Components/checkout-form/checkout-form.component.html
+++ b/src/app/Components/checkout-form/checkout-form.component.html
@@ -42,8 +42,8 @@
     <!-- Email End -->
 
     <!--* Card details Step -->
-    <!-- <mat-step [stepControl]="cardForm">
-      <form action="" [formGroup]="cardForm" #payForm="ngForm">
+    <mat-step [stepControl]="cardForm">
+      <form [formGroup]="cardForm" #payForm="ngForm">
         <ng-template matStepLabel class="step-label">
           Enter card information</ng-template
         >
@@ -149,7 +149,7 @@
           </button>
         </div>
       </form>
-    </mat-step> -->
+    </mat-step>
     <!-- Card details End -->
 
     <!--* Confirmation Step -->
@@ -169,12 +169,12 @@
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque assumenda itaque magnam recusandae. Doloremque voluptatem omnis eum libero dolore reprehenderit perferendis quidem illum facilis, debitis voluptate nobis molestiae. Ullam, excepturi!
         </div>
 
-        <div class="lg:w-[40vw] min-h-[40vh] border-t-4 border-trinityBlue">
+        <div class="lg:w-[50vw] min-h-[40vh] border-t-4 border-trinityBlue" *ngIf="orderInfo">
             <div class="order-top flex justify-between items-center p-4">
               <h1 class="text-2xl">Order Summary</h1>
               <div class="flex justify-evenly text-sm gap-4">
-                <p><span class="text-blue-300 mr-2">Order id:</span> <span class="text-darkBlue font-medium">#5984729</span></p>
-                <p><span class="text-blue-300 mr-2">Order date:</span> <span class="text-darkBlue font-medium">07/09/22</span></p>
+                <p><span class="text-blue-300 mr-2">Order id:</span> <span class="text-darkBlue font-medium">{{orderInfo.total}}</span></p>
+                <p><span class="text-blue-300 mr-2">Order date:</span> <span class="text-darkBlue font-medium">{{orderInfo.createdAt}}</span></p>
               </div>
             </div>
             <div class="order-meta text-center bg-trinityBlue p-4">
@@ -185,33 +185,22 @@
                   <span class="uppercase absolute p-1 px-6 bg-white text-gray-400 text-sm left-1/2  top-0 -translate-x-1/2 -translate-y-1/2 border">Receipt</span>
 
                   <!-- List of Items in Order -->
-                  <li class="flex  gap-4 py-4 border-t border-gray-200 first-of-type:border-none">
+                  <li class="flex  gap-4 py-4 border-t border-gray-200 first-of-type:border-none" *ngFor="let item of orderInfo.items" >
                     <div class="img-wrapper w-[150px]">
-                      <img src="/assets/img/pipeGold.png" alt="Img of a orderitem">
+                      <img src="{{base + item.product.image}}" alt="Img of a orderitem">
                     </div>
                     <div class="item-details flex-grow flex-col flex justify-center">
-                      <p class="font-medium text-darkBlue">Variation of a pipe item</p>
-                      <p class=" text-gray-400 text-xs">Quantity: 9</p>
+                      <p class="font-medium text-darkBlue">{{item.product.name}}</p>
+                      <p class=" text-gray-400 text-xs">Quantity: {{item.quantity}}</p>
                     </div>
                     <div class="price text-center font-semibold flex items-center justify-end text-darkBlue">
-                      <p>{{6490 | currency }}</p>
+                      <p>{{item.totalPrice | currency }}</p>
                     </div>
                   </li>
-                  <li class="flex  gap-4 py-4 border-t border-gray-200">
-                    <div class="img-wrapper w-[150px]">
-                      <img src="/assets/img/pipeGold.png" alt="Img of a orderitem">
-                    </div>
-                    <div class="item-details flex-grow flex-col flex justify-center">
-                      <p class="font-medium text-darkBlue">Variation of a pipe item</p>
-                      <p class=" text-gray-400 text-xs">Quantity: 9</p>
-                    </div>
-                    <div class="price text-center font-semibold flex items-center justify-end text-darkBlue">
-                      <p>{{6490 | currency }}</p>
-                    </div>
-                  </li>
+                  
                   <!-- End list of orders -->
 
-                  <p class="absolute p-1 px-6 bg-trinityBlue text-white text-sm right-[-1px]  bottom-0 translate-y-1/2"><span class="text-xs mr-2">Total:</span> <span class="text-white font-semibold text-md">{{7845 | currency}}</span></p>
+                  <p class="absolute p-1 px-6 bg-trinityBlue text-white text-sm right-[-1px]  bottom-0 translate-y-1/2"><span class="text-xs mr-2">Total:</span> <span class="text-white font-semibold text-md">{{orderInfo.total | currency}}</span></p>
                 </ul>
             </div>
         </div>
